--- a/src/HeaderComponents/Header.css
+++ b/src/HeaderComponents/Header.css
@@ -89,6 +89,7 @@
         margin-left: 19rem;
         border-radius: 20px;
         padding: 10px 0px;
+        box-shadow: 10px 10px 50px 0px;
         transition: all 1s ease-in-out;
     }
 
