--- a/src/ScreenComponents/Home.css
+++ b/src/ScreenComponents/Home.css
@@ -7,25 +7,23 @@
 
 
 .restaurants-ul{ 
+    height: 165vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-right: 0rem;
-    /* margin-top: 4rem; */
 }
 
 .restaurants-ul li{
     padding: 10px;
     margin-top: 5rem;
     list-style: none;
-    /* border: solid black 1px; */
     border-radius: 10px;
     box-shadow: rgb(213, 202, 202)
                 0px 0px 30px 0px;
 }
 
 .restaurants-ul li:hover{
-    cursor: pointer;
     border-radius: 25px;
     box-shadow: rgb(139, 179, 210)
                 0px 0px 20px 0px;
@@ -36,6 +34,37 @@
     width: 280px;
     height: 200px;
     border-radius: 20px;
+}
+
+.restaurants-ul li p{
+    width: fit-content;
+    padding: 10px 10px;
+    margin-top: 1.5rem;
+    font-size: large;
+    background-color: rgb(139, 179, 210);
+    font-weight: bold;
+    border-radius: 5px;
+    box-shadow: 8px 8px rgb(56, 81, 100);
+}
+
+.restaurants-ul a{
+    position: absolute;
+    text-decoration: none;
+    background-color: rgb(139, 179, 210);
+    font-weight: bold;
+    border-radius: 5px;
+    color: black;
+    padding: 10px 25px;
+    margin-left: 19rem;
+    margin-bottom: 2rem;
+    box-shadow: -7px -7px rgb(56, 77, 94);
+    display: none;
+}
+
+
+.restaurants-ul li:hover a{
+    margin-left: 11rem;
+    display: flex;
 }
 
 @media (max-width: 770px){
